# glotter

./: .dockerignore  CMakeLists.txt  Dockerfile  Readme.md  openapi.yaml
.github/workflows/: docker-image.yaml
assets/: index.html
include/: config.hpp.in  translation-bridge.hpp
src/: main.cpp  translation-bridge.cpp
